--- a/HW_5/style.css
+++ b/HW_5/style.css
@@ -8,9 +8,9 @@ body{
     flex-direction: column;
     align-items: center;
     padding-top: 40px;
-    padding-left: 373px;
+    padding-left: 100px;
     padding-bottom: 100px;
-    padding-right: 373px;
+    padding-right: 100px;
     max-width: 1150px;
     /* border: 1px;
     border-style: solid; */
@@ -184,7 +184,7 @@ a{
 .features{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: 80%;
+    width: 90%;
     justify-items: center;
     gap: 60px;
 }
@@ -222,15 +222,17 @@ a{
         }
 
 .services{
-    display: flex;
-    flex-direction: column;
-    
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    gap: 20px;
     margin-top: 100px;
-    width: 60%;
+    justify-content: center;
 }
     .services_top{
-        grid-area: 0 / 0 / 1 / 4;
+        grid-column-start: span 3;
+        margin-bottom: 48px;
+        /* padding: 0 25%; */
     }
         .services__title{
             color: #000;
@@ -247,6 +249,7 @@ a{
             font-style: normal;
             font-weight: 400;
             line-height: 140%; /* 22.4px */ 
+            padding: 0 10px;
         }
     .serveces__content{
         display: grid;
@@ -257,10 +260,13 @@ a{
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding-left: 34px;
-            padding-right: 34px;
+            /* padding-left: 34px; */
+            /* padding-right: 34px; */
             padding-bottom: 34px;
         }
+            .serivices__img{
+                /* width: 90%; */
+            }
             .services__H1{
                 color: #000;
                 text-align: center;
@@ -278,7 +284,8 @@ a{
                 font-weight: 400;
                 line-height: 150%; /* 24px */ 
                 margin-top: 16px;
-                margin-bottom: 24;
+                margin-bottom: 24px;
+                padding: 0 10%;
             }
             .services__learnmore{
                 display: flex;
